--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=E-Commerce
-server.port=8081
-
+server.port=${PORT:8080}
 # ===============================
 #   DATABASE (POSTGRES)
 # ===============================
