--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,11 @@ supabase.s3.region=${SUPABASE_REGION}
 supabase.s3.accessKey=${SUPABASE_ACCESS_KEY}
 supabase.s3.secretKey=${SUPABASE_SECRET_KEY}
 supabase.s3.bucket=categories
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=surajdesai10441045@gmail.com
+spring.mail.password=ljyw frun nutv rwdl
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
