--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,9 @@ supabase.s3.bucket=categories
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=surajdesai10441045@gmail.com
-spring.mail.password=ljyw frun nutv rwdl
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
