--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,22 +33,13 @@ supabase.s3.secretKey=${SUPABASE_SECRET_KEY}
 supabase.s3.bucket=categories
 
 # ===============================
-#   MAIL (GMAIL SMTP)
+#   SENDGRID MAIL
 # ===============================
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=apikey
+spring.mail.password=${SENDGRID_API_KEY}
 
-spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-
-# Timeouts (IMPORTANT)
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
-# Debug (TEMP – remove after testing)
-spring.mail.properties.mail.debug=true
