update Backend sendgrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,14 +32,11 @@ supabase.s3.accessKey=${SUPABASE_ACCESS_KEY}
 supabase.s3.secretKey=${SUPABASE_SECRET_KEY}
 supabase.s3.bucket=categories
 
+
 # ===============================
 #   SENDGRID MAIL
 # ===============================
-spring.mail.host=smtp.sendgrid.net
-spring.mail.port=587
-spring.mail.username=apikey
-spring.mail.password=${SENDGRID_API_KEY}
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.from.email=surajdesai10441045@gmail.com
+sendgrid.from.name=FishMart
 
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
