--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-      <dependency>
+    <dependency>
     <groupId>org.postgresql</groupId>
     <artifactId>postgresql</artifactId>
     <scope>runtime</scope>
-</dependency>
+</dependency>  
+
+
+       <!--  Database  -->
+     <!-- <dependency>
+<groupId>com.mysql</groupId>
+<artifactId>mysql-connector-j</artifactId>
+<scope>runtime</scope>
+</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
